fix: add h2 to the #quiz-end css selector to fix contrast issue on quiz-end.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,7 +574,7 @@ h4 {
 	align-items: flex-start;
 }
 
-#quiz-end {
+#quiz-end h2 {
 	color: var(--clr-light);
 }
 
